<resources>
    <string name="app_name">ComicFantasy</string>
    <string name="marvel">Marvel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="story">Story</string>
    <string name="character">Character</string>
    <string name="creator">Creator</string>
    <string name="event">Event</string>


    <string name="title_movie">Movie</string>
    <string name="title_comic">Comic</string>
    <string name="title_trivia">Trivia</string>
    <string name="title_community">Community</string>
    <string name="trivia">Trivia</string>


    <string name="name_movie">Movie Title</string>
    <string name="plot">Plot Synopsis</string>
    <string name="rating">User Rating</string>
    <string name="movie_details">Movie Details</string>
    <string name="release">Release Date</string>
    <string name="pref_sort_order_label">Sort Label</string>
    <string name="pref_sort_order_key">Sort Key</string>
    <string name="pref_most_popular">Most Popular Movie</string>
    <string name="pref_highest_rated">Highest Rated</string>
    <string name="correct">Correct, You selected %1s, you selected %2s</string>
    <string name="incorrect">Incorrect</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">UpComing</string>
    <string name="latest">Latest</string>
    <string name="_witten_by">Written By:<b> %1$s</b></string>
    <string name="_issue_no">Issue No: <b> %1$s</b></string>
    <string name="_title">Title:<b> %1$s</b></string>
    <string name="_author">Co Author:<b> %1$s</b></string>
    <string name="_creator">Creator:<b> %1$s</b></string>
    <string name="_character">Character:<b> %1$s</b></string>
    <string name="_comic_description">Description:%1$s</string>
    <string name="overview">Overview</string>
    <string name="vote">Vote</string>
    <string name="isbn">Isbn:</string>
    <string name="textview">TextView</string>
    <string name="price">Price:</string>
    <string name="resource_url">Resource url:</string>
    <string name="author">Author</string>
    <string name="_story">The epic, untold love story between Marvel\'s two pre-eminent Black super heroes -- Storm and the Black Panther -- is finally told, as only New York Times best-selling author Eric Jerome Dickey can do it! An orphaned street urchin, living by her wits on the unforgiving plains of Africa as she struggles to harness her slowly-developing mutant powers...A warrior Prince, embarking on his rite of passage as he ponders the great responsibility in his future...And a crew of ruthless mercenaries who\'ll stop at nothing to capture an elusive creature of legend -- the fabled wind-rider. What sparks occur when their paths intersect? Don\'t miss out on this story, True Believer, as it builds to a July Event that will shake the entire Marvel Universe</string>
    <string name="no_author_available">No Author Available</string>
    <string name="notification_channel_id" translatable="false">movie_channel</string>
    <string name="notification_channel_name" translatable="true">Movie</string>
    <string name="notification_title">Movie of the day</string>
    <string name="snooze">Snooze</string>
    <string name="notification_channel_description">It is a great movie</string>
    <string name="notification">Notification</string>
    <string name="incorrect_response">Incorrect!! The correct answer is %1s, you selected %2s </string>

</resources>
